# rust-axum-app

./: .env.example  .gitignore  Cargo.toml  dev.Dockerfile  docker-compose.dev.yml  readme.md  rustfmt.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20220102_000001_create_roles_table.rs  m20220103_000001_create_user_roles_table.rs  m20220104_000001_create_refresh_tokens_table.rs  m20220105_000001_create_files_table.rs  m20220106_000001_create_users_email_history_table.rs
migrations/: 20230101000000_create_users_table.sql
resources/templates/emails/: email_change.html  email_confirmation.html  password_reset.html
src/: app_module.rs  main.rs
src/auth/: auth_module.rs  mod.rs
src/auth/controllers/: auth_controller.rs
src/auth/dto/: access_token_dto.rs  change_email_dto.rs  change_password_dto.rs  forgot_password_dto.rs  login.rs  mod.rs  refresh_token_dto.rs  register_dto.rs  reset_password_dto.rs
src/auth/entities/: mod.rs  refresh_token.rs  refresh_tokens.rs
src/auth/extractor/: jwt_auth.rs  jwt_auth_extractor.rs  mod.rs  role_extractor.rs
src/auth/middleware/: jwt_auth.rs  jwt_secret_middleware.rs  mod.rs
src/auth/repositories/: refresh_token_repository.rs
src/auth/services/: auth_service.rs  confirmation_token_service.rs  mod.rs  refresh_token_service.rs
src/common/: error.rs  mod.rs
src/common/enums/: environment_enum.rs  file_storage_type_enum.rs  mod.rs  role_enum.rs
src/common/error/: app_error.rs  error.rs
src/common/middleware/: i18n.rs  mod.rs
src/common/struct/: app_state.rs  mod.rs  state.rs  token_state.rs
src/config/: app_config.rs  database_config.rs  mod.rs
src/database/: connection.rs  mod.rs
src/database/migrations/: runner.rs
src/database/seeders/: mod.rs  roles_seeder.rs
src/di/: mod.rs  module.rs
src/emails/: mod.rs
src/emails/services/: emails_service.rs  mod.rs
src/emails/strategies/: emails_strategy.rs  mod.rs
src/files/: files_module.rs  mod.rs
src/files/controllers/: files_controller.rs  mod.rs
src/files/dto/: create_file_dto.rs  mod.rs  update_file_dto.rs
src/files/entities/: files.rs
src/files/repositories/: files_repository.rs  mod.rs
src/files/services/: files_service.rs  mod.rs
src/files/strategies/: mod.rs  storage_strategy.rs
src/files/validators/: files_validators.rs  mod.rs
src/i18n/: setup.rs
src/roles/: mod.rs
src/roles/dto/: assign_role_dto.rs  create_role_dto.rs  mod.rs  update_role_dto.rs
src/roles/entities/: mod.rs  role.rs  roles.rs  user_role.rs  user_roles.rs
src/roles/repositories/: mod.rs  roles_repository.rs  user_roles_repository.rs
src/roles/services/: mod.rs  roles_service.rs  user_roles_service.rs
src/users/: mod.rs  users_module.rs
src/users/controllers/: users_controller.rs
src/users/dto/: create_user.rs  create_user_dto.rs  mod.rs  update_user_dto.rs
src/users/entities/: mod.rs  user.rs  users.rs  users_email_history.rs
src/users/repositories/: users_repository.rs
src/users/services/: users_service.rs
src/users/validators/: mod.rs  users_validators.rs  validators.rs
translations/: en.yml  pl.yml
