[package]
name = "rust-axum-app"
version = "0.1.0"
edition = "2024"
authors = ["Mikołaj Gawron <gawrmiko@gmail.com>"]
description = "Rust Axum App"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.87"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-cookies = "0.11.0"
lazy-regex = "3"
strum_macros = "0.27.1"
uuid = {version = "1.15.1", features = ["v4","fast-rng",]}
cargo-watch = "8.5.3"
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
config = "0.15.11"
once_cell = "1.18"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "time", "fs", "net", "io-util"] }
argon2 = "0.5"
rand_core = { version = "0.9.3", features = ["std"] }
jsonwebtoken = "9.3.1"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"