[package]
name = "rust-axum-app"
version = "0.1.0"
edition = "2024"
authors = ["Mikołaj Gawron <gawrmiko@gmail.com>"]
description = "Rust Axum App"

[workspace]
members = [".", "migration"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[lints]
workspace = true

[dependencies]
migration = { path = "migration" }
async-trait = "0.1.87"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
axum = { version = "0.8.1", features = ["multipart"]}
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-cookies = "0.11.0"
lazy-regex = "3"
strum_macros = "0.27.1"
uuid = {version = "1.15.1", features = ["v4","fast-rng",]}
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
config = "0.15.11"
once_cell = "1.18"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "time", "fs", "net", "io-util"] }
argon2 = "0.5"
rand_core = { version = "0.9.3", features = ["std"] }
jsonwebtoken = "9.3.1"
rust-i18n = "3.1.3"
sea-orm = { version = "1.1.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
strum = "0.27.1"
time = "0.3.39"
reqwest = { version = "0.12.14", features = ["json"] }
lettre = { version = "0.11.15", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
tera = "1.20.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"