[package]
name = "rust-axum-app"
version = "0.1.0"
edition = "2024"
authors = ["Mikołaj Gawron <gawrmiko@gmail.com>"]
description = "Rust Axum App"

[workspace]
members = [".", "migration"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"

[lints]
workspace = true

[dependencies]
migration = { path = "migration" }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
axum = { version = "0.8.9", features = ["multipart"]}
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tower-cookies = "0.11.0"
lazy-regex = "3.6.0"
strum_macros = "0.28.0"
uuid = {version = "1.23.0", features = ["v4","fast-rng",]}
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = "0.15.0"
config = "0.15.22"
once_cell = "1.21.4"
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros", "time", "fs", "net", "io-util"] }
argon2 = "0.5.3"
rand_core = { version = "0.10.1" }
jsonwebtoken = "10.3.0"
rust-i18n = "4.0.0"
sea-orm = { version = "1.1.20", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
strum = "0.28.0"
time = "0.3.47"
reqwest = { version = "0.13.2", features = ["json"] }
lettre = { version = "0.11.21", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
tera = "1.20.1"

[dev-dependencies]
anyhow = "1.0.102"
httpc-test = "0.1.10"